--- a/assets/css/templates/_insert-readmore.scss
+++ b/assets/css/templates/_insert-readmore.scss
@@ -10,7 +10,7 @@
 .insert-readmore {
     background-color: var(--color-beige-light);
     z-index: 1;
-    height: calc(var(--insert-readmore-lineheight) * 4.5);
+    height: calc(var(--insert-readmore-lineheight) * 5);
     overflow: hidden;
 }
 
@@ -72,7 +72,7 @@
     z-index: 100;
     position: relative;
     left: 0;
-    top: calc(var(--insert-readmore-lineheight) * -5);
+    top: calc(var(--insert-readmore-lineheight) * -5.25);
     
     width: 100%;
     height: 100%;
