--- a/assets/css/templates/_insert-slide.scss
+++ b/assets/css/templates/_insert-slide.scss
@@ -37,7 +37,7 @@
 
 .insert-slide .emblem {
   width: 30%;
-  margin-top: 1.5rem;
+  margin-top: 1rem;
   margin-left: calc(35% - 1rem);
   margin-right: calc(35% + 1rem);
 }
