--- a/assets/css/templates/_services.scss
+++ b/assets/css/templates/_services.scss
@@ -15,6 +15,7 @@
     width: 40%;
     margin: 0 auto;
     margin-bottom: 1rem;
+    margin-top: -1.75rem;
 }
 
 .services .grid__container {
